--- a/loader.css
+++ b/loader.css
@@ -41,6 +41,23 @@
   }
 }
 
+.toggle-text {
+  max-width: 50px;
+  margin: 50px auto;
+  text-align: center;
+}
+    .toggle-text-content  {
+
+      span {
+          display: none;
+      }
+    }
+
+    .toggle-text-link {
+        display: block;
+        margin: 20px 0;
+    }
+
 .main {
   display: none;
 }
